# agent-workflows

./: pyproject.toml  research.py  sqlc.yaml
agent/: base.py
db/migrations/: 20240518121830_add-ksuid-functions.up.sql  20240518122010_add-agents.down.sql
db/queries/: agents.sql
research/: main.py  sqlc.yaml
research/agents/: base.py
research/db/: completion.sh  db.README.md
research/db/migrations/: 20240518121830_add-ksuid-functions.down.sql  20240518122010_seed.down.sql  20240518122010_seed.up.sql
research/db/queries/: agents.sql
research_agent/db/migrations/: 20240518122010_add-agents.up.sql
