[tool.poetry]
name = "agent-workflows"
version = "0.1.0"
description = ""
authors = ["Tobiah Rex <tobiah.rex@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pytest-asyncio = "^0.23.6"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
